# otus_hw_001

./: CMakeLists.txt  hello.cpp  hello.h  main.cpp  test_hello.cpp  version.h.in
.github/workflows/: cmake-single-platform.yml
